--- a/style.css
+++ b/style.css
@@ -1,19 +1,64 @@
+@import 'reset.css';
+
+* {
+    box-sizing: border-box;
+}
+
+picture {
+    display: block;
+}
+
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+p a, li a {
+    color: blue;
+    text-decoration: underline;
+}
+
+/* STRUCTURE */
+
 body {
-    margin: 0;
     font-family: 'Roboto', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-header {
-    background-color: #1f2937;
+main {
+    flex-grow: 1;
 }
 
-.logo {
-    color: #f9faf8;
-    font-size: 24px;
-    font-weight: bold;
+.inner-column {
+    display: block;
+    border: 4px solid orange;
+    padding: 10px;
 }
 
-.links {
-    color: #e5e7eb;
-    font-size: 18px;
+
+
+
+
+
+
+
+
+
+
+
+
+header, footer, main {
+    border: 4px solid red;
+}
+
+section {
+    border: 4px solid lime;
 }
