--- a/style.css
+++ b/style.css
@@ -117,6 +117,39 @@ footer .inner-column {
     text-align: center;
 }
 
+.quote-text {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1f2937;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+.quote-author {
+    color: var(--black);
+    font-size: 24px;
+    font-weight: bold;
+    text-align: end;
+    margin-right: 200px;
+}
+
+.call-to-action-header {
+    color: var(--white);
+    padding: 0px;
+    margin: 0px;
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+
+.call-to-action-text {
+    color: var(--white);
+    padding: 0px;
+    margin: 0px;
+    font-size: 18px;
+}
+
 /* COMPONENTS */
 
 .button {
@@ -139,13 +172,26 @@ footer .inner-column {
 .square div {
     border-radius: 15px;
     padding: 20px;
-    width: 250px;
-    height: 250px;
+    width: 180px;
+    height: 180px;
     border: 4px solid #3882f6;
     margin: 10px;
     margin-top: 60px;
     margin-right: 20px;
     margin-left: 20px;
+}
+
+.sign-up-button {
+    display: inline-block;
+    background-color: var(--blue);
+    color: #e5e7eb;
+    font-size: 18px;
+    padding: 10px 20px;
+    font-weight: bold;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 8px;
+    border: 2px solid #e5e7eb;
 }
 
 #description {
@@ -197,6 +243,22 @@ footer .inner-column {
     margin-top: 10px;
 }
 
+.call-to-action-container {
+    background-color: var(--blue);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 10px;
+    padding: 50px;
+}
+
+.footer-text {
+    color: var(--herowhite);
+    font-size: 18px;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
 
 
 
@@ -206,9 +268,19 @@ footer .inner-column {
     color: var(--herowhite);
 }
 
+footer {
+    background-color: var(--darkblue);
+    color: var(--herowhite);
+}
+
 .intro {
     background-color: var(--darkblue);
     color: var(--white);
+}
+
+.quote {
+    background-color: #e5e7eb;
+    color: var(--black);
 }
 
 
